--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
       "parser": "babel-eslint"
     },
     "rules": {
-      "no-console": "off"
+      "no-console": "off",
+      "no-unused-vars": "off"
     }
   },
   "browserslist": [
